Ensure that <h2> elements render at default font size on mobile devices

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -441,10 +441,6 @@ Editor
   .text-wrapper {
     display: block;
   }
-
-  h2 {
-    font-size: 14px;
-  }
 }
 
 #inactive-warning {
